k8s/data-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: data-service
  template:
    metadata:
      labels:
        app: data-service
    spec:
      containers:
        - name: data-service
          image: spezielle-programmierung-data-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /live
              port: 3001
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 3001
            initialDelaySeconds: 5
