k8s/data-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  selector:
    app: data-service
  ports:
    - port: 3001
      targetPort: 3001
