k8s/data-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: data.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 3001
